service calls refactored